# RocketInSt-Timetable-Uploader

./: .env.example  .gitignore  LICENSE  README.md  main.py  ocr.py  pyproject.toml
